--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
         "angular": "1.3.0",
         "jquery": "2.1.1",
         "bootstrap": "3.1.1",
-        "angular-route": "1.3.0"
+        "angular-route": "1.3.0",
+        "jquery.ui": "1.11.2"
     }
 }
