--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "start": "node app.js"
     },
     "dependencies": {
-        "express": "4.10.4",
+        "express": "4.12.3",
         "body-parser": "1.10.0",
-        "socket.io": "1.2.1",
-        "mongoose": "3.8.20",
+        "socket.io": "1.3.5",
+        "mongoose": "4.0.1",
         "fbgraph": "mons54/fbgraph",
-        "ejs": "1.0.0"
+        "ejs": "1.0.0",
+        "q": "1.2.0"
     },
     "devDependencies": {
         "supervisor": "x.x.x"
