--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "body-parser": "1.15.2",
         "socket.io": "1.5.1",
         "mongoose": "4.6.5",
-        "fbgraph": "1.3.0",
+        "request": "2.79.0",
         "ejs": "2.5.2",
         "q": "1.4.1"
     },
