--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "express": "4.14.0",
         "body-parser": "1.15.2",
+        "ejs": "2.5.5",
         "socket.io": "1.5.1",
         "mongoose": "4.6.5",
         "request": "2.79.0",
