--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "chessGame",
-    "description": "Chess Game",
-    "version": "1.0",
+    "name": "worldofchess.online",
+    "description": "Online Chess",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "start": "node app.js"
