fix google auth

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "socket.io": "1.5.1",
         "mongoose": "4.6.5",
         "request": "2.79.0",
-        "q": "1.4.1"
+        "q": "1.4.1",
+        "google-auth-library": "0.10.0"
     },
     "devDependencies": {
         "gulp": "*",
