--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 
+# Ignore Mac DS_Store files
+.DS_Store
+
 node_modules/
 bower_components/
 public/docs/
