--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
         "start": "node app.js"
     },
     "dependencies": {
-        "express": "4.14.0",
         "body-parser": "1.15.2",
         "ejs": "2.5.5",
-        "socket.io": "1.5.1",
-        "mongoose": "4.6.5",
-        "request": "2.79.0",
-        "q": "1.4.1",
+        "express": "4.14.0",
         "google-auth-library": "0.10.0",
-        "timesync": "0.4.1"
+        "mongoose": "4.6.5",
+        "q": "1.4.1",
+        "request": "2.79.0",
+        "socket.io": "1.5.1",
+        "timesync": "0.4.1",
+        "vk-call": "1.0.0"
     },
     "devDependencies": {
         "gulp": "*",
