--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "ejs": "2.5.5",
         "express": "4.14.0",
         "google-auth-library": "0.10.0",
+        "gulp-cli": "^2.0.1",
         "mongoose": "^5.0.15",
         "ok.ru": "1.2.0",
         "q": "1.4.1",
@@ -20,7 +21,7 @@
         "vk-call": "1.0.0"
     },
     "devDependencies": {
-        "gulp": "*",
+        "gulp": "3.9.0",
         "gulp-concat": "*",
         "gulp-minify-css": "*",
         "gulp-ngdocs": "*",
